# TextToObject

./: .clang-format  CMakeLists.txt  FontObject.sublime-project  README.md  mod.json
include/: CreatedObject.hpp  Generator.hpp  GeneratorConfig.hpp  GeneratorNew.hpp  MatrixOperations.hpp  ObjectKernel.hpp
src/: ExecMain.cpp  Generator.cpp  GeneratorNew.cpp  Main.cpp  MatrixOperations.cpp
